# ACC

./: CMakeLists.txt  FreeRTOSConfig.h  README.md
.github/workflows/: cmake-single-platform.yml
apps/acc/: CMakeLists.txt  common.h  main.c  task_dimmer.c  task_dimmer.h  task_led.c  task_led.h  task_sensor.c  task_sensor.h
